# project_ghost_shield

./: .gitignore  README.md
.obsidian/: app.json  workspace.json
.obsidian/plugins/obsidian-git/: data.json
Dev Docs/: Get Started.md
dev_docs/: Get Started.md
poc_code/: README.md  setup.py
poc_code/graphical_interface/: drone.py  enviroment.py  physics.py  plane.py  pyproject.toml
poc_code/graphical_interface/model/: drone.glb  enviroment.glb
poc_code/mc_lib/: pyproject.toml
poc_code/mc_lib/src/mc_lib/: multicast_client.py  multicast_server.py
poc_code/mc_lib/src/mc_lib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
poc_code/multicast_client/: README.md  multicast_client.py  multicast_server.py  pyproject.toml
poc_code/multicast_scripts/: README.md  multicast_client.py  multicast_server.py  pyproject.toml
poc_code/multicast_scripts/mc_lib/: multicast_client.py  multicast_server.py
poc_code/rf_algorithm/: README.md  pyproject.toml  rf_simulation.py
poc_code/rf_algorithm/pl/: mclib-0.1.0-py3-none-any.whl
poc_code/rf_algorithm/src/: controller.py  drone.py  field.py  rf_simulation.py  test.py
poc_code/rf_algorithm/src/config/: system_config.json
poc_code/rf_algorithm/src/constants/: messaging_constants.py
poc_code/rf_algorithm/src/helpers/: io_helpers.py  path_constants.py
poc_code/rf_algorithm/src/utils/: distance_obj.py  graph_wrapper.py  read_write_lock.py  vector.py
poc_code/rf_algorithm/src/utils/typings/: helper_types.py
